--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "music-snob-web-application",
+  "name": "cratify",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,19 +9,30 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hello-pangea/dnd": "^18.0.1",
+    "@types/lodash": "^4.17.15",
+    "@types/uuid": "^10.0.0",
+    "framer-motion": "^12.4.7",
+    "html-to-image": "^1.11.13",
+    "lastfm-node-client": "^2.2.0",
+    "lodash": "^4.17.21",
+    "lucide-react": "^0.476.0",
+    "next": "15.1.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "next": "15.1.7"
+    "spotify-web-api-node": "^5.0.2",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@eslint/eslintrc": "^3",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
+    "@types/spotify-web-api-node": "^5.0.11",
     "eslint": "^9",
     "eslint-config-next": "15.1.7",
-    "@eslint/eslintrc": "^3"
+    "postcss": "^8",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5"
   }
 }
